NLSLgnsolver.c/.h was validated with a very simple linear problem.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "*.ispc": "ispc",
-        "math.h": "c"
+        "math.h": "c",
+        "nlslgnsolver.h": "c",
+        "nlslsolver.h": "c"
     }
 }
